# referral_api

./: .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
deploy/nginx/: Dockerfile  host.conf
deploy/python/: Dockerfile  uwsgi.ini
src/: manage.py
src/api/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_user_is_staff.py  0003_user_created_at_user_updated_at_referralcode.py  0004_referralcode_is_active.py
src/referral_api/: asgi.py  settings.py  urls.py  wsgi.py
